// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#468 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "0",
      "id",
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      1,
    ],
    "value": Object {
      "id": 1,
    },
  },
]
`;

exports[`#468 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "0",
      "id",
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "length",
    ],
    "value": 1,
  },
]
`;

exports[`#648 assigning object to itself should not change patches 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "obj",
      "value",
    ],
    "value": 1,
  },
]
`;

exports[`#648 assigning object to itself should not change patches 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "obj",
      "value",
    ],
    "value": 200,
  },
]
`;

exports[`#879 delete item from array - 2 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      2,
    ],
    "value": undefined,
  },
]
`;

exports[`#879 delete item from array - 2 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      2,
    ],
    "value": 3,
  },
]
`;

exports[`#879 delete item from array 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      1,
    ],
    "value": undefined,
  },
]
`;

exports[`#879 delete item from array 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      1,
    ],
    "value": 2,
  },
]
`;

exports[`array 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      0,
    ],
    "value": "new str",
  },
]
`;

exports[`array 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "length",
    ],
    "value": 0,
  },
]
`;

exports[`array 3`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "arr10",
      1,
    ],
    "value": undefined,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr9",
      3,
    ],
    "value": undefined,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr9",
      4,
    ],
    "value": undefined,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr9",
      5,
    ],
    "value": undefined,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr9",
      6,
    ],
    "value": undefined,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr9",
      7,
    ],
    "value": undefined,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr9",
      8,
    ],
    "value": undefined,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr9",
      9,
    ],
    "value": undefined,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr9",
      10,
    ],
    "value": 10,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr8",
      "length",
    ],
    "value": 0,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr7",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr7",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr6",
      0,
    ],
    "value": "c",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr6",
      2,
    ],
    "value": "a",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr5",
      0,
    ],
    "value": "b",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr5",
      1,
    ],
    "value": "c",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr5",
      "length",
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr4",
      0,
    ],
    "value": 0,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr4",
      1,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr4",
      2,
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr4",
      3,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr3",
      "length",
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr2",
      3,
    ],
    "value": "d",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      "0",
      "a",
    ],
    "value": 0,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr1",
      1,
    ],
    "value": Object {
      "a": 2,
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr",
      2,
    ],
    "value": 7,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr",
      3,
    ],
    "value": 8,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr",
      4,
    ],
    "value": 9,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr",
      5,
    ],
    "value": 4,
  },
]
`;

exports[`array 4`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "arr10",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr9",
      "length",
    ],
    "value": 3,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr8",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr8",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr8",
      2,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr7",
      0,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr7",
      1,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr6",
      0,
    ],
    "value": "a",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr6",
      2,
    ],
    "value": "c",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr5",
      0,
    ],
    "value": "a",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr5",
      1,
    ],
    "value": "b",
  },
  Object {
    "op": "add",
    "path": Array [
      "arr5",
      2,
    ],
    "value": "c",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr4",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr4",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr4",
      2,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr4",
      "length",
    ],
    "value": 3,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr3",
      2,
    ],
    "value": "c",
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr2",
      "length",
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      "0",
      "a",
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      "length",
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr",
      2,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr",
      "length",
    ],
    "value": 3,
  },
]
`;

exports[`array 5`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "arr4",
      "length",
    ],
    "value": 0,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr3",
      "length",
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      0,
    ],
    "value": Object {
      "bar": "str1",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      "length",
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr2",
      "length",
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr0",
      0,
    ],
    "value": Object {
      "bar": "str",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr0",
      1,
    ],
    "value": Object {
      "bar": "str0",
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "arr0",
      2,
    ],
    "value": Object {
      "bar": "str0",
    },
  },
]
`;

exports[`array 6`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "arr4",
      0,
    ],
    "value": Object {
      "bar": "str1",
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "arr4",
      1,
    ],
    "value": Object {
      "bar": "str1",
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "arr3",
      1,
    ],
    "value": Object {
      "bar": "str1",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      0,
    ],
    "value": Object {
      "bar": "str1",
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "arr1",
      1,
    ],
    "value": Object {
      "bar": "str1",
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "arr2",
      1,
    ],
    "value": Object {
      "bar": "str1",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr0",
      0,
    ],
    "value": Object {
      "bar": "str0",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr0",
      1,
    ],
    "value": Object {
      "bar": "str0",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr0",
      "length",
    ],
    "value": 2,
  },
]
`;

exports[`array length with ref 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "f",
    ],
    "value": Object {
      "baz": "new str0",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      "length",
    ],
    "value": 0,
  },
]
`;

exports[`array length with ref 2`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "f",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar",
      0,
    ],
    "value": Object {
      "baz": "str",
    },
  },
]
`;

exports[`array pop with ref 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "f",
    ],
    "value": Object {
      "baz": "new str0",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      "length",
    ],
    "value": 0,
  },
]
`;

exports[`array pop with ref 2`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "f",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar",
      0,
    ],
    "value": Object {
      "baz": "str",
    },
  },
]
`;

exports[`array setter with ref 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      0,
    ],
    "value": Object {
      "baz": "str",
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "f",
    ],
    "value": Object {
      "baz": "new str0",
    },
  },
]
`;

exports[`array setter with ref 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      0,
    ],
    "value": Object {
      "baz": "str",
    },
  },
  Object {
    "op": "remove",
    "path": Array [
      "f",
    ],
  },
]
`;

exports[`array shift with ref 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "f",
    ],
    "value": Object {
      "baz": "new str0",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      "length",
    ],
    "value": 0,
  },
]
`;

exports[`array shift with ref 2`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "f",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar",
      0,
    ],
    "value": Object {
      "baz": "str",
    },
  },
]
`;

exports[`array splice with ref 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "f",
    ],
    "value": Object {
      "baz": "new str0",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      "length",
    ],
    "value": 0,
  },
]
`;

exports[`array splice with ref 2`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "f",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar",
      0,
    ],
    "value": Object {
      "baz": "str",
    },
  },
]
`;

exports[`array with ref 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "f",
      "baz",
    ],
    "value": "new str3",
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar1",
    ],
    "value": Object {
      "baz": "new str2",
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      "length",
    ],
    "value": 0,
  },
]
`;

exports[`array with ref 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "f",
      "baz",
    ],
    "value": "str",
  },
  Object {
    "op": "remove",
    "path": Array [
      "foobar1",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar",
      0,
    ],
    "value": Object {
      "baz": "str",
    },
  },
]
`;

exports[`array with ref 3`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "foobar",
      0,
    ],
    "value": Object {},
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar",
      1,
    ],
    "value": Object {
      "baz": "new str0",
    },
  },
  Object {
    "op": "remove",
    "path": Array [
      "f",
    ],
  },
]
`;

exports[`array with ref 4`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      "length",
    ],
    "value": 0,
  },
  Object {
    "op": "add",
    "path": Array [
      "f",
    ],
    "value": Object {
      "baz": "str",
    },
  },
]
`;

exports[`arrays - NESTED splice should should result in remove op. 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "b",
      "c",
      "length",
    ],
    "value": 1,
  },
]
`;

exports[`arrays - NESTED splice should should result in remove op. 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "a",
      "b",
      "c",
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - delete 1`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "x",
      "1",
      "c",
    ],
  },
]
`;

exports[`arrays - delete 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
      "1",
      "c",
    ],
    "value": 3,
  },
]
`;

exports[`arrays - modify and shrink 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 4,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 2,
  },
]
`;

exports[`arrays - modify and shrink 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      2,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - multiple prepend 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 5,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 4,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      2,
    ],
    "value": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      3,
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      4,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - multiple prepend 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      2,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 3,
  },
]
`;

exports[`arrays - multiple splice 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      1,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      2,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      4,
    ],
    "value": 0,
  },
  Object {
    "op": "replace",
    "path": Array [
      "length",
    ],
    "value": 5,
  },
]
`;

exports[`arrays - multiple splice 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      1,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      2,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      4,
    ],
    "value": 4,
  },
  Object {
    "op": "add",
    "path": Array [
      5,
    ],
    "value": 5,
  },
  Object {
    "op": "add",
    "path": Array [
      6,
    ],
    "value": 0,
  },
]
`;

exports[`arrays - pop twice 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 1,
  },
]
`;

exports[`arrays - pop twice 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      2,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - prepend 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 4,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      2,
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      3,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - prepend 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      2,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 3,
  },
]
`;

exports[`arrays - prepend then splice middle 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 4,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 1,
  },
]
`;

exports[`arrays - prepend then splice middle 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - push multiple 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
      3,
    ],
    "value": 4,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      4,
    ],
    "value": 5,
  },
]
`;

exports[`arrays - push multiple 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 3,
  },
]
`;

exports[`arrays - splice (expand) 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 4,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      2,
    ],
    "value": 5,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      3,
    ],
    "value": 6,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      4,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - splice (expand) 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      2,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 3,
  },
]
`;

exports[`arrays - splice (shrink) 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 6,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      2,
    ],
    "value": 5,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 3,
  },
]
`;

exports[`arrays - splice (shrink) 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      2,
    ],
    "value": 3,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      3,
    ],
    "value": 4,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      4,
    ],
    "value": 5,
  },
]
`;

exports[`arrays - splice middle 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 2,
  },
]
`;

exports[`arrays - splice middle 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      2,
    ],
    "value": 3,
  },
]
`;

exports[`arrays - splice middle then prepend 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 4,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 1,
  },
]
`;

exports[`arrays - splice middle then prepend 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - splice should should result in remove op. 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "length",
    ],
    "value": 1,
  },
]
`;

exports[`arrays - splice should should result in remove op. 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      1,
    ],
    "value": 2,
  },
]
`;

exports[`arrays - truncate 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "length",
    ],
    "value": 1,
  },
]
`;

exports[`arrays - truncate 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
      2,
    ],
    "value": 3,
  },
]
`;

exports[`change then delete property 1`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "x",
    ],
  },
]
`;

exports[`change then delete property 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
    ],
    "value": 1,
  },
]
`;

exports[`deeply nested object (with changes) 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "a",
      "x",
    ],
    "value": Object {
      "c": 2,
      "y": 2,
    },
  },
  Object {
    "op": "remove",
    "path": Array [
      "a",
      "b",
    ],
  },
]
`;

exports[`deeply nested object (with changes) 2`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "a",
      "x",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "a",
      "b",
    ],
    "value": Object {
      "c": 1,
      "d": 1,
    },
  },
]
`;

exports[`delete 1 1`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "x",
    ],
  },
]
`;

exports[`delete 1 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
    ],
    "value": Object {
      "y": 4,
    },
  },
]
`;

exports[`enablePatches and assign with ref array 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      "0",
      "a",
    ],
    "value": 444,
  },
  Object {
    "op": "add",
    "path": Array [
      "arr0",
      1,
    ],
    "value": Object {
      "a": 333,
      "c": 333,
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "arr0",
      2,
    ],
    "value": Array [
      Object {
        "a": 444,
      },
    ],
  },
  Object {
    "op": "remove",
    "path": Array [
      "a",
      "b",
    ],
  },
]
`;

exports[`enablePatches and assign with ref array 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      "0",
      "a",
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      "arr0",
      "length",
    ],
    "value": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "a",
      "b",
    ],
    "value": Object {
      "c": 1,
    },
  },
]
`;

exports[`enablePatches and assign with ref object 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "a",
      "arr",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "a",
      "arr",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "b",
      "c",
    ],
    "value": 333,
  },
  Object {
    "op": "add",
    "path": Array [
      "x",
    ],
    "value": Object {
      "c": 333,
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "x1",
    ],
    "value": Object {
      "c": 333,
    },
  },
]
`;

exports[`enablePatches and assign with ref object 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "arr",
      "length",
    ],
    "value": 0,
  },
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "b",
      "c",
    ],
    "value": 1,
  },
  Object {
    "op": "remove",
    "path": Array [
      "x",
    ],
  },
  Object {
    "op": "remove",
    "path": Array [
      "x1",
    ],
  },
]
`;

exports[`enablePatches and assign/delete with ref object 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
    ],
    "value": Object {
      "c": 444,
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "x1",
    ],
    "value": Object {
      "c": 444,
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "a",
      "arr",
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "add",
    "path": Array [
      "a",
      "arr",
      1,
    ],
    "value": 2,
  },
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "b",
    ],
    "value": Object {
      "f": 1,
    },
  },
]
`;

exports[`enablePatches and assign/delete with ref object 2`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "x",
    ],
  },
  Object {
    "op": "remove",
    "path": Array [
      "x1",
    ],
  },
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "arr",
      "length",
    ],
    "value": 0,
  },
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "b",
    ],
    "value": Object {
      "c": 1,
    },
  },
]
`;

exports[`minimum amount of changes 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
    ],
    "value": 4,
  },
  Object {
    "op": "replace",
    "path": Array [
      "y",
    ],
    "value": Object {
      "a": 2,
    },
  },
]
`;

exports[`minimum amount of changes 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
    ],
    "value": 3,
  },
  Object {
    "op": "replace",
    "path": Array [
      "y",
    ],
    "value": Object {
      "a": 4,
    },
  },
]
`;

exports[`nested change in array 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "0",
      "0",
      "b",
    ],
    "value": 2,
  },
]
`;

exports[`nested change in array 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "0",
      "0",
      "b",
    ],
    "value": 1,
  },
]
`;

exports[`nested change in object 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "b",
    ],
    "value": 2,
  },
]
`;

exports[`nested change in object 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "a",
      "b",
    ],
    "value": 1,
  },
]
`;

exports[`nested object (no changes) 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
    ],
    "value": Object {
      "b": 1,
    },
  },
  Object {
    "op": "remove",
    "path": Array [
      "a",
    ],
  },
]
`;

exports[`nested object (no changes) 2`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "x",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "a",
    ],
    "value": Object {
      "b": 1,
    },
  },
]
`;

exports[`nested object (with changes) 1`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
    ],
    "value": Object {
      "b": 2,
      "y": 2,
    },
  },
  Object {
    "op": "remove",
    "path": Array [
      "a",
    ],
  },
]
`;

exports[`nested object (with changes) 2`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "x",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "a",
    ],
    "value": Object {
      "b": 1,
      "c": 1,
    },
  },
]
`;

exports[`object - assign ref 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
    ],
    "value": Object {
      "baz": "str",
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "foo",
      "bar1",
    ],
    "value": Object {
      "baz": "str",
    },
  },
]
`;

exports[`object - assign ref 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
    ],
    "value": Object {
      "baz": "str",
    },
  },
  Object {
    "op": "remove",
    "path": Array [
      "foo",
      "bar1",
    ],
  },
]
`;

exports[`object 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foo",
      "bar",
    ],
    "value": "new str",
  },
]
`;

exports[`object 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foo",
      "bar",
    ],
    "value": "str",
  },
]
`;

exports[`object assign ref 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foo",
      "bar",
    ],
    "value": "new str",
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar",
      "foo",
    ],
    "value": Object {
      "bar": "new str",
    },
  },
]
`;

exports[`object assign ref 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foo",
      "bar",
    ],
    "value": "str",
  },
  Object {
    "op": "remove",
    "path": Array [
      "foobar",
      "foo",
    ],
  },
]
`;

exports[`object delete key 1`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "foo",
      "bar",
    ],
  },
]
`;

exports[`object delete key 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "foo",
      "bar",
    ],
    "value": "str",
  },
]
`;

exports[`object setter with ref 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      "f",
    ],
    "value": Object {
      "baz": "str",
    },
  },
  Object {
    "op": "add",
    "path": Array [
      "f",
    ],
    "value": Object {
      "baz": "new str0",
    },
  },
]
`;

exports[`object setter with ref 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "foobar",
      "f",
    ],
    "value": Object {
      "baz": "str",
    },
  },
  Object {
    "op": "remove",
    "path": Array [
      "f",
    ],
  },
]
`;

exports[`object with ref 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "f",
      "baz",
    ],
    "value": "new str3",
  },
  Object {
    "op": "remove",
    "path": Array [
      "foobar",
    ],
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar1",
    ],
    "value": Object {
      "baz": "new str2",
    },
  },
]
`;

exports[`object with ref 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "f",
      "baz",
    ],
    "value": "str",
  },
  Object {
    "op": "add",
    "path": Array [
      "foobar",
    ],
    "value": Object {
      "baz": "str",
    },
  },
  Object {
    "op": "remove",
    "path": Array [
      "foobar1",
    ],
  },
]
`;

exports[`patches mutate 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "items",
    ],
    "value": Array [],
  },
]
`;

exports[`patches mutate 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "items",
    ],
    "value": Array [],
  },
]
`;

exports[`same value replacement - 1 1`] = `Array []`;

exports[`same value replacement - 1 2`] = `Array []`;

exports[`same value replacement - 2 1`] = `Array []`;

exports[`same value replacement - 2 2`] = `Array []`;

exports[`same value replacement - 3 1`] = `Array []`;

exports[`same value replacement - 3 2`] = `Array []`;

exports[`same value replacement - 4 1`] = `Array []`;

exports[`same value replacement - 4 2`] = `Array []`;

exports[`same value replacement - 4 3`] = `Array []`;

exports[`same value replacement - 4 4`] = `Array []`;

exports[`same value replacement(array) - 2 1`] = `Array []`;

exports[`same value replacement(array) - 2 2`] = `Array []`;

exports[`same value replacement(array) - 2 3`] = `Array []`;

exports[`same value replacement(array) - 2 4`] = `Array []`;

exports[`set value and pop the value (array) - 2 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      0,
    ],
    "value": Object {},
  },
  Object {
    "op": "replace",
    "path": Array [
      1,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      2,
    ],
    "value": Object {
      "x": 1,
    },
  },
]
`;

exports[`set value and pop the value (array) - 2 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      0,
    ],
    "value": 1,
  },
  Object {
    "op": "replace",
    "path": Array [
      1,
    ],
    "value": Object {
      "x": 1,
    },
  },
  Object {
    "op": "replace",
    "path": Array [
      2,
    ],
    "value": Object {},
  },
]
`;

exports[`simple array 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      "0",
      "a",
    ],
    "value": 2,
  },
]
`;

exports[`simple array 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "arr1",
      "0",
      "a",
    ],
    "value": 1,
  },
]
`;

exports[`simple assignment - 1 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
    ],
    "value": 4,
  },
]
`;

exports[`simple assignment - 1 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
    ],
    "value": 3,
  },
]
`;

exports[`simple assignment - 2 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "y",
    ],
    "value": 5,
  },
]
`;

exports[`simple assignment - 2 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "y",
    ],
    "value": 4,
  },
]
`;

exports[`simple assignment - 3 1`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "0",
      "y",
    ],
    "value": 5,
  },
]
`;

exports[`simple assignment - 3 2`] = `
Array [
  Object {
    "op": "replace",
    "path": Array [
      "x",
      "0",
      "y",
    ],
    "value": 4,
  },
]
`;

exports[`simple delete 1`] = `
Array [
  Object {
    "op": "remove",
    "path": Array [
      "x",
    ],
  },
]
`;

exports[`simple delete 2`] = `
Array [
  Object {
    "op": "add",
    "path": Array [
      "x",
    ],
    "value": 2,
  },
]
`;
